# MIDIPICO

./: .gitmodules  CMakeLists.txt  README.md  main.c  midi_uart.pio  pico_sdk_import.cmake  pio_midi_uart.c  pio_midi_uart.h  tusb_config.h
.github/workflows/: b  build.y  build.yml
lib/local_pio_midi_uart/: CMakeLists.txt
src/: CMakeLists.txt  main.c  midi_routing-h  midi_routing.c  usb_descriptors.c
